# bazel-playground

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md
apps/: README.md  docker-compose.yaml  main.py  pyproject.toml
apps/aws/: dymamo_db_connection.py  list_s3_buckets.py  rds_db_connection.py
apps/media_calc/: __main__.py
apps/student_management/: __main__.py
